# Android-Automation

./: .android-automation.example.json  .gitignore  README.md  pyproject.toml  run.py  setup.py
android_automation/: __init__.py  adb.py  agent.py  cli.py  config.py  errors.py  providers.py  ui.py
tests/: test_adb.py  test_agent.py  test_cli.py  test_config.py  test_providers.py  test_run.py  test_setup.py  test_ui.py
tests/fixtures/: window_dump.xml
